src/objects/Action__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Type__c</fullName>
        <description>This means if action needs to perform automatically or manually</description>
        <label>Activation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Preference__c</fullName>
        <label>Delivery Preference</label>
		<picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekdays</fullName>
            </picklistValues>
			<picklistValues>
                <fullName>Any Day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Type__c</fullName>
        <label>Email Type</label>
		<picklist>
            <picklistValues>
                <fullName>SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIVE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <description>Task detail(Name, Type, Subject, Description) will be saved in JSON format.</description>
        <label>Task Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template_Id__c</fullName>
        <description>Save id of EmailTemplate (If Email Template), Call and SMS template data will be retrieved from RingDNA</description>
        <label>Template Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call+Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>